WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229588
[Mac] http/tests/media/user-gesture-preserved-across-xmlhttprequest.html is a flaky fail/crash/timeout
https://bugs.webkit.org/show_bug.cgi?id=229588
Summary
[Mac] http/tests/media/user-gesture-preserved-across-xmlhttprequest.html is a...
Eric Hutchison
Reported
2021-08-26 14:56:17 PDT
Created
attachment 436572
[details]
CrashLog from
r268268
http/tests/media/user-gesture-preserved-across-xmlhttprequest.html is a flaky timeout on BigSur wk2 Debug. Also, it is a flaky failure on Monterey wk1 and a flaky crash on Catalina/BigSur wk1. History:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fmedia%2Fuser-gesture-preserved-across-xmlhttprequest.html
Results:
https://build.webkit.org/results/Apple-BigSur-Debug-WK2-Tests/r281633%20(3446)/results.html
Diff: --- /Volumes/Data/worker/bigsur-debug-tests-wk2/build/layout-test-results/http/tests/media/user-gesture-preserved-across-xmlhttprequest-expected.txt +++ /Volumes/Data/worker/bigsur-debug-tests-wk2/build/layout-test-results/http/tests/media/user-gesture-preserved-across-xmlhttprequest-actual.txt @@ -1,3 +1,5 @@ +FAIL: Timed out waiting for notifyDone to be called + Test that a user gesture is preserved across XHR and setTimeout. @@ -101,42 +103,4 @@ Promise rejected correctly OK ** no gesture -> fetch -> blob -> video playback: should fail -EVENT(canplaythrough) -fetching blob, delay = 100 -FETCH(resolved): status = 200 -FETCH(response resolved) -RUN(shouldReject(mediaElement.play()).then(testComplete, testComplete)) -Promise rejected correctly OK -** no gesture -> promise -> video playback: should fail -EVENT(canplaythrough) -promise -PROMISE(resolved) -RUN(shouldReject(mediaElement.play()).then(testComplete, testComplete)) -Promise rejected correctly OK - -** gesture -> promise -> video playback: should fail because promise only propagates user gesture propagated through Fetch -EVENT(canplaythrough) -promise -PROMISE(resolved) -RUN(shouldReject(mediaElement.play()).then(testComplete, testComplete)) -Promise rejected correctly OK - -** gesture -> fetch -> promise -> video playback: should succeed -EVENT(canplaythrough) -fetch then promise -FETCH(resolved): status = 200 -PROMISE(resolved) -RUN(shouldResolve(mediaElement.play()).then(testComplete, testComplete)) -Promise resolved OK - -** gesture -> fetch -> crypto -> video playback: should fail since the user gesture will not be propagated through other API even though it returns promises -EVENT(canplaythrough) -fetch then crypto -FETCH(resolved): status = 200 -CRYPTO(key generated) -RUN(shouldReject(mediaElement.play()).then(testComplete, testComplete)) -Promise rejected correctly OK - -END OF TEST - CrashLog Attached:
Attachments
CrashLog from r268268
(172.57 KB, text/plain)
2021-08-26 14:56 PDT
,
Eric Hutchison
no flags
Details
Patch
(4.08 KB, patch)
2022-04-26 23:45 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-08-26 14:56:56 PDT
<
rdar://problem/82408723
>
Eric Hutchison
Comment 2
2021-08-26 15:26:14 PDT
Updated test expectations at
https://trac.webkit.org/changeset/281659/webkit
. Reproduced timeout using run-webkit-tests --debug -f --force --iterations 1000 --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 -1 --clobber-old-results http/tests/media/user-gesture-preserved-across-xmlhttprequest.html on
r280985
..
youenn fablet
Comment 3
2022-04-26 23:45:22 PDT
Created
attachment 458422
[details]
Patch
Chris Dumez
Comment 4
2022-04-27 08:00:47 PDT
Comment on
attachment 458422
[details]
Patch r=me
EWS
Comment 5
2022-04-27 10:24:18 PDT
Committed
r293516
(
250047@main
): <
https://commits.webkit.org/250047@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458422
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug