[Mac] http/tests/media/user-gesture-preserved-across-xmlhttprequest.html is a flaky fail/crash/timeout https://bugs.webkit.org/show_bug.cgi?id=229588 <rdar://problem/82408723>

Reviewed by Chris Dumez.

Source/WebCore:

I removed the user gesture in fetch by mistake so let's add it back.
Test is no longer crashing on bots and is timing out on debug bots because it is a slow test.
Mark test as slow and remove flakiness expectations.

Covered by unflaked test.

* Modules/fetch/WindowOrWorkerGlobalScopeFetch.cpp:
(WebCore::doFetch):

LayoutTests:

* platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/250047@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293516 268f45cc-cd09-0410-ab3c-d52691b4dbfc